crates/swc/tests/tsc-references/classes/constructorDeclarations/constructorParameters/constructorParameterProperties2/input.ts/es2015.1.normal/output.js
class C {
    constructor(y){
    }
}
var c;
var r = c.y;
class D {
    constructor(y){
        this.y = y;
    }
}
var d;
var r2 = d.y;
class E {
    constructor(y){
        this.y = y;
    }
}
var e;
var r3 = e.y; // error
class F {
    constructor(y){
        this.y = y;
    }
}
var f;
var r4 = f.y; // error
